# nova

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  SConscript  SConstruct  TODO.md  conanfile.py  requirements.txt
.github/workflows/: main-ci.yml
docs/: Modding.md
examples/: DemoModule.cpp  DemoModule.sh
include/nova/dynamic/: DynHelper.hpp
include/nova/input/: InputProcessor.hpp
include/nova/loading/: ModLoader.hpp
include/nova/modules/: Module.hpp  ModuleTree.hpp
include/nova/modules/builtins/: HelpModule.hpp
include/nova/modules/util/: ManifestHelper.hpp
scripts/: README.md  novacd
src/: CMakeLists.txt  SConscript
src/nova/: Main.cpp
src/nova/input/: InputProcessor.cpp
src/nova/loading/: ModLoader.cpp
src/nova/modules/: Module.cpp  ModuleTree.cpp
src/nova/modules/builtins/: HelpModule.cpp
test/: CMakeLists.txt  SConscript
test/src/: LinkPrereqs.cpp  ModuleTreeTest.cpp  TestLinking.cpp
test/src/modules/: DemoModule.cpp
